XE-1352: Remove Main.RssFeeds page * Moved no longer used keys to the deprecation section

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3226,23 +3226,7 @@ xe.xwiki.administration=Administration application
 xe.xwiki.administration.install=The XWiki space contains documents used by XWiki for its own use. You can administer your wiki through the {0}.
 
 ### RSS
-xe.rss.feeds=RSS Feeds
-xe.rss.feeds.description=There are currently 4 types of RSS feeds available on this wiki. You can subscribe to each of them by clicking on their name or on the icon next to them.
 xe.rss.pages.modified=Modified Pages RSS Feed
-xe.rss.global=Global RSS feed:
-xe.rss.global.description=RSS feed of page activity.
-xe.rss.blog=Blog RSS feed:
-xe.rss.blog.description=RSS feed of blog posts from all blogs.
-xe.rss.blog.feed=Blog RSS Feed
-xe.rss.search.description=RSS feed on a specific search query term. To generate such a feed, go to the {0} page, run a search on a keyword and then click on the RSS icon.
-xe.rss.tags.description=RSS feed on documents tagged with a specific term or all documents with a tag. To generate such a feed, go to the {0} page and click on the RSS feed icon you wish to use.
-xe.rss.tags.feed=Tags RSS Feed
-xe.rss.tags=Tags RSS feeds:
-xe.rss.search=Search RSS feeds:
-xe.rss.icon=rss icon
-xe.rss.version=Version
-xe.rss.editedby=edited by
-xe.rss.on=on
 xe.rss.feed.description=RSS feed for document changes
 xe.rss.feed.tags.description=RSS feed for documents tagged with "{0}"
 xe.rss.feed.spaces.description=RSS feed for documents in space(s) "{0}"
@@ -4874,6 +4858,28 @@ XWiki.XWikiPreferences_obfuscateEmailAddresses.hint=This affects only the email 
 platform.appwithinminutes.classEditorDatePickerMonthNames=January, February, March, April, May, June, July, August, September, October, November, December
 platform.appwithinminutes.classEditorDatePickerWeekDayNames=Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday
 platform.appwithinminutes.classEditorDatePickerFirstWeekDay=0
+
+#######################################
+## until 7.0M2
+#######################################
+
+### RSS
+xe.rss.feeds=RSS Feeds
+xe.rss.feeds.description=There are currently 4 types of RSS feeds available on this wiki. You can subscribe to each of them by clicking on their name or on the icon next to them.
+xe.rss.search=Search RSS feeds:
+xe.rss.search.description=RSS feed on a specific search query term. To generate such a feed, go to the {0} page, run a search on a keyword and then click on the RSS icon.
+xe.rss.tags=Tags RSS feeds:
+xe.rss.tags.feed=Tags RSS Feed
+xe.rss.tags.description=RSS feed on documents tagged with a specific term or all documents with a tag. To generate such a feed, go to the {0} page and click on the RSS feed icon you wish to use.
+xe.rss.blog=Blog RSS feed:
+xe.rss.blog.feed=Blog RSS Feed
+xe.rss.blog.description=RSS feed of blog posts from all blogs.
+xe.rss.global=Global RSS feed:
+xe.rss.global.description=RSS feed of page activity.
+xe.rss.icon=rss icon
+xe.rss.version=Version
+xe.rss.editedby=edited by
+xe.rss.on=on
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
