[release] Fix the build.

--- a/xwiki-platform-core/xwiki-platform-wiki/xwiki-platform-wiki-test/xwiki-platform-wiki-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-wiki/xwiki-platform-wiki-test/xwiki-platform-wiki-test-tests/pom.xml
@@ -135,6 +135,7 @@
           <filesToInclude>webapps/xwiki/META-INF/maven/org.xwiki.platform/xwiki-platform-web/pom.xml</filesToInclude>
           <regex>false</regex>
           <commentsEnabled>false</commentsEnabled>
+          <skip>${skipTests}</skip>
           <replacements>
             <replacement>
               <token>&lt;/properties&gt;</token>
