XWIKI-11887: Move the XWiki.Spaces Macro page into the Index Application

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2018,18 +2018,6 @@ core.links.content=Content
 # Home
 xe.home.title=Wiki Home
 
-### Spaces (XWiki Enterprise wiki)
-xe.spaces=Spaces
-xe.spaces.createspace=Create a new space
-xe.spaces.createspace.defaultname=Space name
-xe.spaces.createspace.submit=Create
-xe.spaces.action.index=See space index
-xe.spaces.action.index.alt=Space index
-xe.spaces.action.admin=See space administration
-xe.spaces.action.admin.alt=Administer space
-xe.spaces.action.delete.alt=Delete space
-xe.spaces.deleteSpace.deleted=Space \u00AB{0}\u00BB deleted.
-
 # Recent Members (XWiki Enterprise wiki)
 xe.recentmembers=Recent Members
 
@@ -4880,6 +4868,22 @@ xe.rss.icon=rss icon
 xe.rss.version=Version
 xe.rss.editedby=edited by
 xe.rss.on=on
+
+#######################################
+## until 7.0RC1
+#######################################
+
+### Spaces (XWiki Enterprise wiki)
+xe.spaces=Spaces
+xe.spaces.createspace=Create a new space
+xe.spaces.createspace.defaultname=Space name
+xe.spaces.createspace.submit=Create
+xe.spaces.action.index=See space index
+xe.spaces.action.index.alt=Space index
+xe.spaces.action.admin=See space administration
+xe.spaces.action.admin.alt=Administer space
+xe.spaces.action.delete.alt=Delete space
+xe.spaces.deleteSpace.deleted=Space \u00AB{0}\u00BB deleted.
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
