XWIKI-11887: Move the XWiki.Spaces Macro page into the Index Application * Fix type of artifact in POM

--- a/xwiki-platform-core/xwiki-platform-dashboard/xwiki-platform-dashboard-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-dashboard/xwiki-platform-dashboard-ui/pom.xml
@@ -48,6 +48,7 @@
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-index-ui</artifactId>
       <version>${project.version}</version>
+      <type>xar</type>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
