--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -243,6 +243,12 @@
         <version>${bootstrap.version}</version>
         <scope>runtime</scope>
       </dependency>
+      <!-- Used in oldcore to prioritize MandatoryDocumentInitializers -->
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.2</version>
+    </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
