--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -581,6 +581,13 @@
       <version>${commons.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Used in to prioritize MandatoryDocumentInitializers -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+    </dependency>
+
     <!-- Test dependencies -->
 
     <!-- Used to mock XWiki class -->
