--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -472,6 +472,9 @@
             <exclude>**/internal/**</exclude>
             <exclude>**/test/**</exclude>
             <!-- Remove the following excludes after we release the current version as final -->
+            <!-- The watchlist plugin has been moved to legacy and a component-based implementation has replaced it.
+                 Major refactoring has been performed. -->
+            <exclude>**/com/xpn/xwiki/plugin/watchlist/**</exclude>
           </excludes>
         </configuration>
       </plugin>
