XWIKI-9467: Add ability to automatically import the extension source information when importing an extension XWIKI-9391: Increase/set extension title weight when searching for an extension XWIKI-11913: Add support for SCM in extension REST service XWIKI-11899: Implement advanced search in XWiki based Extension Repository REST

--- a/xwiki-platform-core/xwiki-platform-repository/xwiki-platform-repository-server-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-repository/xwiki-platform-repository-server-api/pom.xml
@@ -65,6 +65,11 @@
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-search-solr-query</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-cache-api</artifactId>
       <version>${project.version}</version>
     </dependency>
