--- a/xwiki-platform-core/xwiki-platform-repository/xwiki-platform-repository-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-repository/xwiki-platform-repository-test/pom.xml
@@ -27,25 +27,19 @@
     <artifactId>xwiki-platform-repository</artifactId>
     <version>7.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-repository-test-pageobjects</artifactId>
-  <name>XWiki Platform - Repository - Page Objects</name>
-  <packaging>jar</packaging>
-  <description>XWiki Platform - Repository - Page Objects</description>
+  <artifactId>xwiki-platform-repository-test</artifactId>
+  <name>XWiki Platform - Repository - Tests - Parent POM</name>
+  <packaging>pom</packaging>
+  <description>Tests for the Repository Application</description>
   <properties>
-    <!-- None of the classes is valid -->
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
     <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
   </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-test</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-administration-test-pageobjects</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>xwiki-platform-repository-test-tests</module>
+    <module>xwiki-platform-repository-test-pageobjects</module>
+    <module>xwiki-platform-repository-test-utils</module>
+  </modules>
 </project>
