--- a/xwiki-platform-core/xwiki-platform-repository/xwiki-platform-repository-test/xwiki-platform-repository-test-pageobjects/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-repository/xwiki-platform-repository-test/xwiki-platform-repository-test-pageobjects/pom.xml
@@ -24,23 +24,28 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-repository-test</artifactId>
     <version>7.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-repository</artifactId>
-  <name>XWiki Platform - Repository</name>
-  <packaging>pom</packaging>
-  <description>XWiki Platform - Repository</description>
-  <modules>
-    <module>xwiki-platform-repository-server-api</module>
-    <module>xwiki-platform-repository-server-ui</module>
-  </modules>
-  <profiles>
-    <profile>
-      <id>integration-tests</id>
-      <modules>
-        <module>xwiki-platform-repository-test</module>
-      </modules>
-    </profile>
-  </profiles>
+  <artifactId>xwiki-platform-repository-test-pageobjects</artifactId>
+  <name>XWiki Platform - Repository - Tests - Page Objects</name>
+  <packaging>jar</packaging>
+  <description>XWiki Platform - Repository - Page Objects</description>
+  <properties>
+    <!-- None of the classes is valid -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-test</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-administration-test-pageobjects</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 </project>
