XWIKI-11926: Improve the document diff UI in order to reuse it to show the differences between multiple documents XWIKI-9785: If attachment is of type 'text' (js, css, txt, etc.) allow the user to enable the diff across history

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1420,6 +1420,23 @@ core.captcha.image.label=Verification image
 core.captcha.image.instruction=Please type in the word shown above
 core.captcha.image.alternateText=There is supposed to be an image captcha here, you could refresh the page or press the {0} button to try getting another image.
 
+# History
+web.history.changes.summary=Summary
+web.history.changes.summary.documentProperties=Page properties
+web.history.changes.summary.attachments=Attachments
+web.history.changes.summary.objects=Objects
+web.history.changes.summary.classProperties=Class properties
+web.history.changes.summary.modifiedAddedRemoved={0} modified, {1} added, {2} removed
+web.history.changes.noChanges=No changes
+web.history.changes.details=Details
+web.history.changes.document.content=Content
+web.history.changes.attachment.author=Author
+web.history.changes.attachment.size=Size
+web.history.changes.attachment.content=Content
+web.history.changes.attachment.noContentChanges=This is not a text file or the file is too large
+web.history.changes.privateInformation=Private information
+web.history.changes.lineEndings=Only the line endings have changed
+
 core.viewers.diff.title=Changes for document <a href="{1}">{0}</a>
 core.viewers.diff.from=From version {0}
 core.viewers.diff.to=To version {0}
@@ -1427,7 +1444,7 @@ core.viewers.diff.editedBy=edited by {0}
 core.viewers.diff.editedOn=on {0}
 core.viewers.diff.editComment=Change comment: 
 core.viewers.diff.noEditComment=There is no comment for this version
-core.viewers.diff.metadata.author=Document author
+core.viewers.diff.metadata.author=Author
 core.viewers.diff.metadata.parent=Parent
 core.viewers.diff.metadata.language=Language
 core.viewers.diff.metadata.defaultLanguage=Default language
@@ -1437,91 +1454,6 @@ core.viewers.diff.metadata.web=Space
 core.viewers.diff.metadata.space=Space
 core.viewers.diff.metadata.hidden=Hidden
 core.viewers.diff.metadata.syntax=Syntax
-core.viewers.diff.tag.tags=Tags
-core.viewers.diff.contentChanges=Content changes
-core.viewers.diff.attachmentChanges=Attachment changes
-core.viewers.diff.attachment.added=Attachment has been added
-core.viewers.diff.attachment.deleted=Attachment has been deleted
-core.viewers.diff.attachment.updated=Attachment has been updated from version <a href="{1}">{0}</a> to version <a href="{3}">{2}</a>
-core.viewers.diff.commentChanges=Comment changes
-core.viewers.diff.comment.added=Comment number {0} added
-core.viewers.diff.comment.deleted=Comment number {0} deleted
-core.viewers.diff.comment.updated=Comment number {0} modified
-core.viewers.diff.comment.author=Author
-core.viewers.diff.comment.date=Date
-core.viewers.diff.comment.comment=Comment content
-core.viewers.diff.comment.highlight=Highlighted text
-core.viewers.diff.comment.replyto=Reply to
-core.viewers.diff.comment.target=Comment target
-core.viewers.diff.comment.state=Comment state
-core.viewers.diff.comment.selection=Selection
-core.viewers.diff.comment.originalSelection=Original selection
-core.viewers.diff.comment.selectionLeftContext=Selection left context
-core.viewers.diff.comment.selectionRightContext=Selection right context
-core.viewers.diff.objectChanges=Object changes
-core.viewers.diff.object.added=Object number {0} of type {1} added
-core.viewers.diff.object.deleted=Object number {0} of type {1} deleted
-core.viewers.diff.object.updated=Object number {0} of type {1} modified
-core.viewers.diff.classChanges=Class changes
-core.viewers.diff.class.added=Added property {0}
-core.viewers.diff.class.removed=Removed property {0}
-core.viewers.diff.class.changed=Changed property {0}
-
-changes.changesofpage=Changes
-changes.in=in
-changes.space=space
-changes.from=From
-changes.to=To
-changes.comment=Change comment
-changes.nocomment=There is no comment for this version
-changes.version=Version
-changes.editedby=edited by
-changes.on=on
-changes.metadatachanges=Metadata changes
-changes.property=Property
-changes.nometadatachanges=There are no metadata changes
-changes.contentchanges=Content changes
-changes.nocontentchanges=There are no content changes
-changes.attachmentchanges=Attachment changes
-changes.noattachmentchanges=There are no attachment changes
-changes.filename=Filename
-changes.action=Action
-changes.commentchanges=Comment changes
-changes.nocommentchanges=There are no comment changes
-changes.metadata.parent=Parent
-changes.metadata.web=Space
-changes.metadata.name=Page Name
-changes.metadata.author=Author
-changes.metadata.language=Language
-changes.metadata.defaultLanguage=Default Language
-changes.attachmentadded=Attachment has been added
-changes.attachmentdeleted=Attachment has been deleted
-changes.attachmentupdatedfromversion=Attachment has been updated from version
-changes.toversion=to version
-changes.commentchange=Comment change
-changes.commentAdded=Comment number {0} added
-changes.commentRemoved=Comment number {0} removed
-changes.comment.property=Property
-changes.comment.previousvalue=Previous value
-changes.comment.newvalue=New value
-changes.comment.author=Author
-changes.comment.date=Date
-changes.comment.comment=Comment
-changes.comment.highlight=Highlighted text
-changes.comment.replyto=Reply to
-changes.blog.title=Title
-changes.blog.extract=Extract
-changes.blog.category=Categories
-changes.blog.editcategories=Edit categories
-changes.blog.addnewcategory=Add a category
-changes.tag.tags=Tags
-changes.objectchanges=Object Changes
-changes.objectAdded=Object added
-changes.objectRemoved=Object removed
-changes.ofclass=of class
-changes.noobjectchanges=No Object Changes
-changes.classeschanges=Class Changes
-changes.noclasseschanges=No Class Changes
 
 ####################
 # Macros
@@ -4884,6 +4816,94 @@ xe.rss.feed.description=RSS feed for document changes
 xe.rss.feed.tags.description=RSS feed for documents tagged with "{0}"
 xe.rss.feed.spaces.description=RSS feed for documents in space(s) "{0}"
 xe.rss.feed.tagsAndSpaces.description=RSS feed for documents tagged with "{0}" in space(s) "{1}"
+
+### History
+core.viewers.diff.tag.tags=Tags
+core.viewers.diff.contentChanges=Content changes
+core.viewers.diff.attachmentChanges=Attachment changes
+core.viewers.diff.attachment.added=Attachment has been added
+core.viewers.diff.attachment.deleted=Attachment has been deleted
+core.viewers.diff.attachment.updated=Attachment has been updated from version <a href="{1}">{0}</a> to version <a href="{3}">{2}</a>
+core.viewers.diff.commentChanges=Comment changes
+core.viewers.diff.comment.added=Comment number {0} added
+core.viewers.diff.comment.deleted=Comment number {0} deleted
+core.viewers.diff.comment.updated=Comment number {0} modified
+core.viewers.diff.comment.author=Author
+core.viewers.diff.comment.date=Date
+core.viewers.diff.comment.comment=Comment content
+core.viewers.diff.comment.highlight=Highlighted text
+core.viewers.diff.comment.replyto=Reply to
+core.viewers.diff.comment.target=Comment target
+core.viewers.diff.comment.state=Comment state
+core.viewers.diff.comment.selection=Selection
+core.viewers.diff.comment.originalSelection=Original selection
+core.viewers.diff.comment.selectionLeftContext=Selection left context
+core.viewers.diff.comment.selectionRightContext=Selection right context
+core.viewers.diff.objectChanges=Object changes
+core.viewers.diff.object.added=Object number {0} of type {1} added
+core.viewers.diff.object.deleted=Object number {0} of type {1} deleted
+core.viewers.diff.object.updated=Object number {0} of type {1} modified
+core.viewers.diff.classChanges=Class changes
+core.viewers.diff.class.added=Added property {0}
+core.viewers.diff.class.removed=Removed property {0}
+core.viewers.diff.class.changed=Changed property {0}
+
+### Old History (should have been deprecated long time ago)
+changes.changesofpage=Changes
+changes.in=in
+changes.space=space
+changes.from=From
+changes.to=To
+changes.comment=Change comment
+changes.nocomment=There is no comment for this version
+changes.version=Version
+changes.editedby=edited by
+changes.on=on
+changes.metadatachanges=Metadata changes
+changes.property=Property
+changes.nometadatachanges=There are no metadata changes
+changes.contentchanges=Content changes
+changes.nocontentchanges=There are no content changes
+changes.attachmentchanges=Attachment changes
+changes.noattachmentchanges=There are no attachment changes
+changes.filename=Filename
+changes.action=Action
+changes.commentchanges=Comment changes
+changes.nocommentchanges=There are no comment changes
+changes.metadata.parent=Parent
+changes.metadata.web=Space
+changes.metadata.name=Page Name
+changes.metadata.author=Author
+changes.metadata.language=Language
+changes.metadata.defaultLanguage=Default Language
+changes.attachmentadded=Attachment has been added
+changes.attachmentdeleted=Attachment has been deleted
+changes.attachmentupdatedfromversion=Attachment has been updated from version
+changes.toversion=to version
+changes.commentchange=Comment change
+changes.commentAdded=Comment number {0} added
+changes.commentRemoved=Comment number {0} removed
+changes.comment.property=Property
+changes.comment.previousvalue=Previous value
+changes.comment.newvalue=New value
+changes.comment.author=Author
+changes.comment.date=Date
+changes.comment.comment=Comment
+changes.comment.highlight=Highlighted text
+changes.comment.replyto=Reply to
+changes.blog.title=Title
+changes.blog.extract=Extract
+changes.blog.category=Categories
+changes.blog.editcategories=Edit categories
+changes.blog.addnewcategory=Add a category
+changes.tag.tags=Tags
+changes.objectchanges=Object Changes
+changes.objectAdded=Object added
+changes.objectRemoved=Object removed
+changes.ofclass=of class
+changes.noobjectchanges=No Object Changes
+changes.classeschanges=Class Changes
+changes.noclasseschanges=No Class Changes
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
