--- a/xwiki-platform-core/xwiki-platform-sharepage/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-sharepage/pom.xml
@@ -34,4 +34,12 @@
   <modules>
     <module>xwiki-platform-sharepage-ui</module>
   </modules>
+  <profiles>
+    <profile>
+      <id>integration-tests</id>
+      <modules>
+        <module>xwiki-platform-sharepage-test</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
