--- a/xwiki-platform-core/xwiki-platform-sharepage/xwiki-platform-sharepage-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-sharepage/xwiki-platform-sharepage-test/pom.xml
@@ -27,20 +27,18 @@
     <artifactId>xwiki-platform-sharepage</artifactId>
     <version>7.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-sharepage-ui</artifactId>
-  <name>XWiki Platform - Share Page - UI</name>
-  <packaging>xar</packaging>
+  <artifactId>xwiki-platform-sharepage-test</artifactId>
+  <name>XWiki Platform - Share Page - Tests - Parent POM</name>
+  <packaging>pom</packaging>
+  <description>XWiki Platform - Share Page - Tests - Parent POM</description>
   <properties>
-    <!-- Don't run CLIRR here since there's no Java code. -->
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
-    <!-- Name to display by the Extension Manager -->
-    <xwiki.extension.name>Share Page Application</xwiki.extension.name>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
   </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-mailsender</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>xwiki-platform-sharepage-test-pageobjects</module>
+    <module>xwiki-platform-sharepage-test-tests</module>
+  </modules>
 </project>
