--- a/xwiki-platform-core/xwiki-platform-sharepage/xwiki-platform-sharepage-test/xwiki-platform-sharepage-test-pageobjects/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-sharepage/xwiki-platform-sharepage-test/xwiki-platform-sharepage-test-pageobjects/pom.xml
@@ -24,22 +24,17 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-sharepage</artifactId>
+    <artifactId>xwiki-platform-sharepage-test</artifactId>
     <version>7.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-sharepage-ui</artifactId>
-  <name>XWiki Platform - Share Page - UI</name>
-  <packaging>xar</packaging>
-  <properties>
-    <!-- Don't run CLIRR here since there's no Java code. -->
-    <xwiki.clirr.skip>true</xwiki.clirr.skip>
-    <!-- Name to display by the Extension Manager -->
-    <xwiki.extension.name>Share Page Application</xwiki.extension.name>
-  </properties>
+  <artifactId>xwiki-platform-sharepage-test-pageobjects</artifactId>
+  <name>XWiki Platform - Share Page - Tests - Page Objects</name>
+  <packaging>jar</packaging>
+  <description>XWiki Platform - Share Page - Tests - Page Objects</description>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-mailsender</artifactId>
+      <artifactId>xwiki-platform-test</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
