--- a/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/pom.xml
@@ -99,4 +99,12 @@
     <module>xwiki-platform-search-solr-rest</module>
     <module>xwiki-platform-search-solr-ui</module>
   </modules>
+  <profiles>
+    <profile>
+      <id>integration-tests</id>
+      <modules>
+        <module>xwiki-platform-search-solr-test-utils</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
