--- a/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/xwiki-platform-search-solr-test-utils/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/xwiki-platform-search-solr-test-utils/pom.xml
@@ -24,44 +24,22 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-repository-test</artifactId>
+    <artifactId>xwiki-platform-search-solr</artifactId>
     <version>7.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-repository-test-utils</artifactId>
-  <name>XWiki Platform - Repository - Tests - Utils</name>
+  <artifactId>xwiki-platform-search-solr-test-utils</artifactId>
+  <name>XWiki Platform - Search - Solr - Tests - Utils</name>
   <packaging>jar</packaging>
-  <description>XWiki Platform - Repository - Tests - Utils</description>
+  <description>XWiki Platform - Search - Solr - Tests - Utils</description>
   <properties>
     <!-- None of the classes is valid -->
     <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-extension-api</artifactId>
-      <version>${commons.version}</version>
-      <type>test-jar</type>
-    </dependency>
-    <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-test</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-search-solr-test-utils</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-repository-server-api</artifactId>
-      <version>${project.version}</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>xwiki-platform-oldcore</artifactId>
-          <groupId>org.xwiki.platform</groupId>
-        </exclusion>
-      </exclusions>
     </dependency>
   </dependencies>
 </project>
