XWIKI-11506: Get a status of the documents of an extension from Extension Manager * Add a secondary button to compute the differences. * Display the differences in a new tab 'Changes' (first version, no summary for the moment).

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3750,10 +3750,13 @@ extensions.actions.continue=Continue
 extensions.actions.diff=Show changes
 extensions.actions.repairXAR=Repair
 extensions.actions.repairXAR.hint=Mark this XAR extension as installed without importing its wiki pages
+extensions.actions.diffXAR=Compute changes
+extensions.actions.diffXAR.hint=Compute the changes made to the extension pages
 extensions.install.title=Installing {0}
 extensions.install.error.installFailure=Failed to install extension with id {0} and version {1}:
 extensions.install.error.prepareFailure=Can't resolve extension with id {0} and version {1}:
 extensions.install.error.alreadyInstalled=This extension is already installed.
+extensions.install.error.diffXarFailure=Failed to compute the changes made to the extension pages
 extensions.install.list.install=The following new extensions will be installed:
 extensions.install.list.upgrade=The following extensions will be upgraded:
 extensions.install.list.downgrade=The following extensions will be downgraded:
@@ -3801,6 +3804,7 @@ extensions.info.authors.xwikiorg=XWiki Development Team
 extensions.info.category.description=Description
 extensions.info.category.releaseNotes=Release Notes
 extensions.info.category.dependencies=Dependencies
+extensions.info.category.changes=Changes
 extensions.info.category.progress=Progress
 extensions.info.id=Id
 extensions.info.type=Type
