XWIKI-11741: Allow selecting a flavor when installing a wiki

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3906,6 +3906,18 @@ platform.extension.distributionWizard.extension.defaultui.wikisStepTitle=Wikis
 platform.extension.distributionWizard.extension.defaultui.wikisStepSummary=Update the default set of wiki pages on each of the existing wikis (except for the main wiki which is handled in the first step).
 platform.extension.distributionWizard.wikisStepDescription=The following wikis have been detected. You can update the default set of wiki pages on all of them now by installing the user interface version recommended below, or you can do this later by accessing each wiki separately.
 
+platform.extension.distributionWizard.extension.flavorStepTitle=Flavor
+platform.extension.distributionWizard.extension.flavorStepSummary=Install or update the flavor of this wiki
+platform.extension.distributionWizard.flavorStepDescription=The flavor is a set of wiki pages that provide high level features on top of the XWiki runtime. These wiki pages are grouped by features into applications such as blog, activity stream, dashboard. Applications are packaged as extensions installable with the Extension Manager.
+platform.extension.distributionWizard.flavorStepDistributionLabel=Distribution
+platform.extension.distributionWizard.flavorStepDistributionHint=The following distribution has been detected:
+platform.extension.distributionWizard.flavorStepCurrentFlavorLabel=The current flavor
+platform.extension.distributionWizard.flavorStepNewFlavorLabel=Install a new flavor
+
+platform.extension.distributionWizard.extension.flavor.wikisStepTitle=Wikis
+platform.extension.distributionWizard.extension.flavor.wikisStepSummary=Update the flavor on each of the existing wikis that needs it (except for the main wiki which is handled in the first step).
+platform.extension.distributionWizard.wikiflavorsStepDescription=The following wikis have been detected. You can update the flavor on all of them now or you can do this later by accessing each wiki separately.
+
 platform.extension.distributionWizard.extension.outdatedextensionsStepTitle=Extensions
 platform.extension.distributionWizard.extension.outdatedextensionsStepSummary=Update the installed extensions
 platform.extension.distributionWizard.extensionsStepDescription=Extensions provide additional features on top of the XWiki runtime. They are commonly distributed as XARs (e.g. {0}XWiki applications{1}, {2}wiki macros{3}, {4}color themes{5}) and JARs (server side code including especially {6}components{7} and {8}script services{9}).
