--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -443,7 +443,7 @@
             <difference>
               <differenceType>7012</differenceType>
               <className>org/xwiki/skin/Skin</className>
-              <method>org.xwiki.rendering.syntax.Syntax getTargetSyntax()</method>
+              <method>org.xwiki.rendering.syntax.Syntax getOutputSyntax()</method>
               <justification>Add a new method to this young API</justification>
             </difference>
           </ignored>
