XWIKI-11063: Improve the "Search Results" on mobile * Make the search page responsive. * Moves the Velocity macros from Main.SolrSearch to Main.SolrSearchMacros so that they can be overwritten by someone that wants to create a custom search page. * Use the icon theme as mush as possible. * Fix some styling issues left after the migration from Colibri to Flamingo.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3583,7 +3583,6 @@ search.page.title.noquery=Search
 search.page.bar.spaces.title=Select spaces
 search.page.bar.spaces.all=All spaces
 search.page.bar.wikis.all=All wikis
-search.page.bar.query.label=Query
 search.page.bar.query.tip=search...
 search.page.bar.query.title=Enter your search query
 search.page.bar.querytip=e.g. xwiki* AND "search query"
@@ -4908,6 +4907,12 @@ changes.ofclass=of class
 changes.noobjectchanges=No Object Changes
 changes.classeschanges=Class Changes
 changes.noclasseschanges=No Class Changes
+
+#######################################
+## until 7.1M1
+#######################################
+
+search.page.bar.query.label=Query
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
