XWIKI-11602: Introduce a configuration to select the HTML version to use according to the current skin - Trying to fix the build by adding a dependency on the html5 renderers inside platform, on the modules (skin and dashboard) that actually need them.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/pom.xml
@@ -38,6 +38,12 @@
     <xwiki.extension.name>Flamingo Skin</xwiki.extension.name>
   </properties>
   <dependencies>
+    <!-- HTML5 renderer since this skin outputs html5. See src/main/resources/flamingo/skin.properties -->
+    <dependency>
+      <groupId>org.xwiki.rendering</groupId>
+      <artifactId>xwiki-rendering-syntax-html5</artifactId>
+      <version>${rendering.version}</version>
+    </dependency>
     <!-- LESS Module -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
