--- a/xwiki-platform-core/xwiki-platform-dashboard/xwiki-platform-dashboard-macro/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-dashboard/xwiki-platform-dashboard-macro/pom.xml
@@ -58,6 +58,11 @@
       <artifactId>xwiki-rendering-syntax-annotatedxhtml</artifactId>
       <version>${rendering.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.rendering</groupId>
+      <artifactId>xwiki-rendering-syntax-annotatedhtml5</artifactId>
+      <version>${rendering.version}</version>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
