XWIKI-10881: Introduce a proper "webjars" type instead of reusing the "bin" type XWIKI-11170: Add ability to register Resource Reference Handlers for new Resource Reference Types XWIKI-11996: Change webjar URLs to better support relative resource paths

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -475,6 +475,8 @@
             <exclude>com/xpn/xwiki/plugin/charts/source/TableDataSource</exclude>
             <exclude>com/xpn/xwiki/plugin/charts/source/TableDataSourceFactory</exclude>
             <exclude>com/xpn/xwiki/plugin/charts/wizard/DatasourceDefaultsHelper</exclude>
+            <!-- Young API. Large refactoring for adding the ability to register new URL Resource Types -->
+            <exclude>**/org/xwiki/resource/**</exclude>
           </excludes>
         </configuration>
       </plugin>
