--- a/xwiki-platform-core/xwiki-platform-resource/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-resource/pom.xml
@@ -32,7 +32,9 @@
   <packaging>pom</packaging>
   <description>An abstraction of a XWiki URI (Entity, Template, Skin, etc)</description>
   <modules>
+    <!-- Sorted Alphabetically -->
     <module>xwiki-platform-resource-api</module>
     <module>xwiki-platform-resource-default</module>
+    <module>xwiki-platform-resource-servlet</module>
   </modules>
 </project>
