--- a/xwiki-platform-core/xwiki-platform-url/xwiki-platform-url-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-url/xwiki-platform-url-api/pom.xml
@@ -32,7 +32,7 @@
   <packaging>jar</packaging>
   <description>Allows configuration of the URL scheme used by XWiki to parse/serialize URLs</description>
   <properties>
-    <xwiki.jacoco.instructionRatio>0.57</xwiki.jacoco.instructionRatio>
+    <xwiki.jacoco.instructionRatio>0.56</xwiki.jacoco.instructionRatio>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>URL API</xwiki.extension.name>
   </properties>
@@ -40,6 +40,14 @@
     <dependency>
       <groupId>org.xwiki.commons</groupId>
       <artifactId>xwiki-commons-configuration-api</artifactId>
+      <version>${commons.version}</version>
+    </dependency>
+    <!-- TODO: Used to access EscapeTool. We need to fix this by introducing a new xwiki-commons-url module and
+         add a URIUtils class there (and also move stuff from this module that can be moved there, like ExtendedURL)
+         and then refactory EscapeTool to use that new module -->
+    <dependency>
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-velocity</artifactId>
       <version>${commons.version}</version>
     </dependency>
     <dependency>
